--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     </div>
                 </div>
             </div> 
-            <form class="repair_info_form">
+            <form class="repair_info_form phone_none">
                 <div class="repair_info_form_header">Не знаете, что сломалось? <br><div class="dots">
                     Срочный выезд мастера
                 </div></div>
@@ -112,8 +112,8 @@
             </form>
 
         </div>
-        <div class="price_button">
-            <button class="repair_info_form_btn">
+        <div class="price_button order2">
+            <button class="repair_info_form_btn ">
                 <div class="repair_info_form_btn_text">Рассчитать стоимость</div>
                 <img class="repair_info_form_btn_ico" src="styles/img/svg/next.svg">	
             </button>
