--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
     <title>main</title>
 </head>
 <body>
+    <div class="modal">
+        <div class="modal_form">
+            <div class="modal_header">Оставьте заявку и наш менеджер свяжется с вами</div>
+            <div class="modal_body">
+                <input class="repair_info_form_phone modal_phone" placeholder="Ваш телефон" type="phone"/>
+                <button class="repair_info_form_btn modal_btn">
+                    <div class="repair_info_form_btn_text">Оставить заявку</div>
+                    <img class="repair_info_form_btn_ico" src="styles/img/arr_l.png">	
+                </button>
+            </div>
+            <div class="modal_offerta">Нажимая кнопку "Оставить заявку" вы даёте согласие на обработку ваших персональных данных</div>
+        </div>
+    </div>
     <header>
         <div class="head">
             <div class="head_number">
@@ -39,7 +52,7 @@
         <div class="width_btn">
             <div class="repair_info_items">
                 <div class="repair_info_items_line">
-                    <div class="repair_info_items_item width_3">
+                    <div class="repair_info_items_item item_selected width_3">
                         <img src="styles/img/svg/compucter.svg" alt="" class="repair_info_img">
                         <div class="repair_info_name">Компьютер</div>
                     </div>
@@ -112,7 +125,7 @@
             </form>
 
         </div>
-        <div class="price_button order2">
+        <div class="price_button suggest order2">
             <button class="repair_info_form_btn ">
                 <div class="repair_info_form_btn_text">Рассчитать стоимость</div>
                 <img class="repair_info_form_btn_ico" src="styles/img/svg/next.svg">	
@@ -206,42 +219,42 @@
                 <div class="price_table_item gr">
                     <div class="price_table_service">Услуга</div>
                     <div class="price_table_digits">Цена</div>
-                    <div class="price_table_button">   </div>
+                    <div class="price_table_button suggest">   </div>
                 </div>
                 <div class="price_table_item">
                     <div class="price_table_service">Выезд мастера</div>
                     <div class="price_table_digits">300 ₽</div>
-                    <div class="price_table_button">Заказать</div>
+                    <div class="price_table_button suggest">Заказать</div>
                 </div>
                 <div class="price_table_item">
                     <div class="price_table_service">Диагностика</div>
                     <div class="price_table_digits">Бесплатно</div>
-                    <div class="price_table_button">Заказать</div>
+                    <div class="price_table_button suggest">Заказать</div>
                 </div>
                 <div class="price_table_item">
                     <div class="price_table_service">Замена дисплея</div>
                     <div class="price_table_digits">от 499 ₽</div>
-                    <div class="price_table_button">Заказать</div>
+                    <div class="price_table_button suggest">Заказать</div>
                 </div>
                 <div class="price_table_item">
                     <div class="price_table_service">Замена клавиатуры</div>
                     <div class="price_table_digits">от 599 ₽</div>
-                    <div class="price_table_button">Заказать</div>
+                    <div class="price_table_button suggest">Заказать</div>
                 </div>
                 <div class="price_table_item">
                     <div class="price_table_service">Замена USB</div>
                     <div class="price_table_digits">от 499 ₽</div>
-                    <div class="price_table_button">Заказать</div>
+                    <div class="price_table_button suggest">Заказать</div>
                 </div>
                 <div class="price_table_item">
                     <div class="price_table_service">Замена HDD</div>
                     <div class="price_table_digits">от 499 ₽</div>
-                    <div class="price_table_button">Заказать</div>
+                    <div class="price_table_button suggest">Заказать</div>
                 </div>
                 <div class="price_table_item">
                     <div class="price_table_service">Замена разъёма питания</div>
                     <div class="price_table_digits">от 499 ₽</div>
-                    <div class="price_table_button">Заказать</div>
+                    <div class="price_table_button suggest">Заказать</div>
                 </div>
                 <div class="prices_show_all">
                     <img class="prices_show_all_ico" src="styles/img/svg/eye_icon-icons.com_71204.svg"></img>
