--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="width_btn">
             <div class="repair_info_items">
                 <div class="repair_info_items_line">
-                    <div class="repair_info_items_item item_selected width_3">
+                    <div class="repair_info_items_item width_3">
                         <img src="styles/img/svg/compucter.svg" alt="" class="repair_info_img">
                         <div class="repair_info_name">Компьютер</div>
                     </div>
