--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <section class="repair_info">
         <div class="width_btn">
             <div class="repair_info_items">
+                <div class="repair_info_header">Что сломалось?</div>
                 <div class="repair_info_items_line">
                     <div class="repair_info_items_item item_selected width_3">
                         <img src="styles/img/svg/compucter.svg" alt="" class="repair_info_img">
@@ -160,14 +161,23 @@
                 <div class="repair_info_items_item prc item_selected">
                     <img src="styles/img/svg/compucter.svg" alt="" class="repair_info_img">
                     <div class="repair_info_name">Компьютер</div>
+                    <div class="tap_img">
+                        <img src="styles/img/icons8-tap-60_1.png" alt="">
+                    </div>
                 </div>
                 <div class="repair_info_items_item prc">
                     <img src="styles/img/svg/laptop.svg" alt="" class="repair_info_img">
                     <div class="repair_info_name">Ноутбук</div>
+                    <div class="tap_img">
+                        <img src="styles/img/icons8-tap-60_1.png" alt="">
+                    </div>
                 </div>
                 <div class="repair_info_items_item prc">
                     <img src="styles/img/svg/device.svg" alt="" class="repair_info_img">
                     <div class="repair_info_name">Планшет/Смартфон</div>
+                    <div class="tap_img">
+                        <img src="styles/img/icons8-tap-60_1.png" alt="">
+                    </div>
                 </div>
             </div>
             <div class="prices_table">
@@ -203,3 +213,13 @@
     </footer>
 
 </html>
+<script>
+    function fuck(e) {
+        $('.services_item').on('click', function() {
+            $(this).addClass('service_selected')
+        })
+        $('.service_selected').on('click', function() {
+            $(this).removeClass('service_selected')
+        })
+    }
+</script>
